--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -52,9 +52,11 @@ pipeline {
 
 
         stage('Deploy to Staging') {
-            script {
-                sh "kubectl config use-context staging-context"
-                sh "kubectl set image deployment/flask-app flask-app=${IMAGE_TAG}"
+            steps {
+                script {
+                   sh "kubectl config use-context staging-context"
+                   sh "kubectl set image deployment/flask-app flask-app=${IMAGE_TAG}"
+                }
             }
         }
 
@@ -71,10 +73,13 @@ pipeline {
         }
 
         stage('Deploy to Production') {
-            script {
-                sh "kubectl config use-context production-context"
-                sh "kubectl set image deployment/flask-app flask-app=${IMAGE_TAG}"
-            }       
+            steps {
+               script {
+                  sh "kubectl config use-context production-context"
+                  sh "kubectl set image deployment/flask-app flask-app=${IMAGE_TAG}"
+                }  
+            }
+                 
         }
     }
 
