--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -11,8 +11,8 @@ pipeline {
     stages {
         stage('Setup') {
             steps {
-                sh 'chmod +x steps.sh'
-                sh './steps.sh'
+                sh 'chmod +x app/steps.sh'
+                sh './app/steps.sh'
                 
 
                 withCredentials([file(credentialsId: KUBECONFIG_CREDENTIALS_ID, variable: 'KUBECONFIG')]) {
@@ -31,7 +31,7 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
-                sh 'sudo docker build -t ${IMAGE_TAG} .'
+                sh 'docker build -t ${IMAGE_TAG} .'
                 echo "Docker image built successfully: ${IMAGE_TAG}"
             }
         }
@@ -39,8 +39,8 @@ pipeline {
         stage('Push Docker Image to DockerHub') {
             steps {
                 script {
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_TOKEN')]) {
-                        sh 'echo "$DOCKER_TOKEN" | docker login --username "$DOCKER_USER" --password-stdin https://index.docker.io/v1/'
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASSWORD')]) {
+                        sh 'echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USER" --password-stdin https://index.docker.io/v1/'
                         echo "Logged into DockerHub successfully."
                         
                         sh 'docker push ${IMAGE_TAG}'
@@ -54,7 +54,7 @@ pipeline {
         stage('Deploy to Staging') {
             steps {
                 script {
-                   sh "kubectl config use-context staging-context"
+                   sh "kubectl config use-context staging-context --kubeconfig=${KUBECONFIG}"
                    sh "kubectl set image deployment/flask-app flask-app=${IMAGE_TAG}"
                 }
             }
@@ -75,7 +75,7 @@ pipeline {
         stage('Deploy to Production') {
             steps {
                script {
-                  sh "kubectl config use-context production-context"
+                  sh "kubectl config use-context production-context --kubeconfig=${KUBECONFIG}"
                   sh "kubectl set image deployment/flask-app flask-app=${IMAGE_TAG}"
                 }  
             }
