--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         stage('Setup') {
             steps {
                 sh 'chmod +x app/steps.sh'
-                sh './app/steps.sh'
+                sh 'app/steps.sh'
                 
 
                 withCredentials([file(credentialsId: KUBECONFIG_CREDENTIALS_ID, variable: 'KUBECONFIG')]) {
