changed path to steps.sh

--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -11,8 +11,8 @@ pipeline {
     stages {
         stage('Setup') {
             steps {
-                sh 'chmod +x app/steps.sh'
-                sh 'app/steps.sh'
+                sh 'chmod +x ./app/steps.sh'
+                sh './app/steps.sh'
                 
 
                 withCredentials([file(credentialsId: KUBECONFIG_CREDENTIALS_ID, variable: 'KUBECONFIG')]) {
