--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
 
         stage('Test') {
             steps {
-                sh 'bash -c "source app/env/bin/activate && pytest test_app.py"'
+                sh 'bash -c "source env/bin/activate && pytest app/test_app.py"'
             }
         }
 
