--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -18,6 +18,7 @@ pipeline {
     
         stage('Setup') {
             steps {
+                sh 'export PATH=$PATH:/var/lib/jenkins/.local/bin'
                 sh'python3 -m pip install --upgrade pip && pip install --cache-dir=/var/lib/jenkins/.cache/pip -r app/requirements.txt -v'
                 
                 withCredentials([file(credentialsId: 'kubeconfig-creds', variable: 'KUBECONFIG')]) {
