--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -22,10 +22,12 @@ pipeline {
                 sh'python3 -m pip install --upgrade pip && pip install --cache-dir=/var/lib/jenkins/.cache/pip -r app/requirements.txt -v'
                 
                 withCredentials([file(credentialsId: 'kubeconfig-creds', variable: 'KUBECONFIG')]) {
-                    sh 'chmod 644 ${KUBECONFIG}'
-                    sh 'export KUBECONFIG=$KUBECONFIG'
-                    sh 'aws sts get-caller-identity'
-                    sh 'kubectl config get-contexts --kubeconfig=${KUBECONFIG}'
+                   sh '''
+                     chmod 644 ${KUBECONFIG}  
+                     export KUBECONFIG=${KUBECONFIG} 
+                     aws sts get-caller-identity  
+                     kubectl config get-contexts --kubeconfig=${KUBECONFIG}  
+                    '''
                 }
             }
         }
