--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ terraform.tfstate
 terraform.tfstate.backup
 .terraform.lock.hcl
 terraform-provider-aws_v5.81.0_x5
+
+.pytest_cache/
+__pycache__/
+app.pyc
